<resources>
    <string name="app_name">QuizApp2</string>
    <string name="quizapp">QuizApp</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">please enter your name</string>
    <string name="name">name</string>
    <string name="start">start</string>
    <string name="result">Result</string>
    <string name="image">image</string>
    <string name="username">Username</string>
</resources>